@@ -64,6 +64,10 @@ Library
 - Issue 24230: The tempfile module now accepts bytes for prefix, suffix and dir
   parameters and returns bytes in such situations (matching the os module APIs).
 
+- Issue #22189: collections.UserString now supports __getnewargs__(),
+  __rmod__(), casefold(), format_map(), isprintable(), and maketrans().
+  Patch by Joe Jevnik.
+
 - Issue 24244: Prevents termination when an invalid format string is
   encountered on Windows in strftime.
 
